# provenova

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.claude/: launch.json
.github/: pull_request_template.md
server/: LICENSE  pyproject.toml
server/app/: __init__.py  config.py  db.py  deps.py  entitlements.py  main.py  ratelimit.py  rbac.py  security.py  worker.py
server/app/api/v1/: auth_admin.py  compliance.py  growth.py  ingest.py  public.py  runs.py
server/app/services/: accounts.py  badges.py  benchmark.py  cards.py  demo_seed.py  doi.py  growth.py  ingest.py  limits.py  metriq.py  settings.py
server/app/services/attestation/: __init__.py  keys.py  signing.py
server/app/services/compliance/: __init__.py  describe.py  loader.py  rule_engine.py
server/app/web/: docs.py  glossary.py  hardware.py  reports.py  routes.py  seo.py
server/app/web/docs/: capturing-runs.md  compliance.md  core-concepts.md  corpus-and-leaderboard.md  deployment.md  getting-started.md  libraries.md  licensing.md  open-schemas.md  overview.md  pricing-faq.md  product-tour.md  reproduce-and-drift.md  result-cards-and-badges.md
server/app/web/static/: docs.css  docs.js
server/app/web/templates/: 404.html  _brand.html  _helpers.html  admin.html  base.html  card.html  compliance.html  compliance_framework.html  docs.html  embed_card.html  hardware_compare.html  hardware_device.html  hardware_index.html  landing.html  leaderboard.html  login.html  mfa_setup.html  plans.html  pricing.html  record_detail.html  records.html  report.html  reports.html  settings.html  start.html  trust.html  verify.html
(+83 files in other folders)
