[project]
name = "provenova-workspace"
version = "0.1.0"
description = "Provenova monorepo (dev workspace: core + sdk + crawler + server)."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["server"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
