[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumledger-server"
version = "0.1.0"
description = "QuantumLedger hosted server: ingestion + read API, web app, engines, compliance."
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
dependencies = [
    "quantumledger-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "PyYAML>=6",
    "markdown>=3.5",
    "cryptography>=42",
    "argon2-cffi>=23",
    "authlib>=1.3",
    "apscheduler>=3.10",
    "email-validator>=2.1",
    "numpy>=1.26",
    "pyotp>=2.9",
    "qrcode>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["web/templates/*.html", "web/templates/**/*.html", "web/static/*", "web/docs/*.md"]
